<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_servo"
            android:title="@string/app_name" />
        <item
            android:id="@+id/devicesFragment"
            android:icon="@drawable/ic_devices"
            android:title="@string/devices" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>
</menu>
