<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/transmission_mode">

        <DropDownPreference
            android:enabled="false"
            app:entries="@array/connection_types"
            app:entryValues="@array/connection_types"
            app:icon="@drawable/ic_bluetooth"
...
